--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,11 @@
 h1{
   color: #00000
 }
+
+td{
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  border: 5px solid black;
+  font-size: 80px
+}
